# aboutabook

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
books/: models.py
config/: models.py  schema.py  settings.py  urls.py  views.py
contractor/: apps.py  models.py
publishing_plan/: apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
templates/: base.html  index.html  publishing_plan_create.html  publishing_plan_detail.html  publishing_plan_list.html  publishing_plan_update.html  todo_list.html
tests/test_publishing_plan/: tests.py
user/: forms.py  models.py  serializers.py  urls.py  views.py
