[tool.poetry]
name = "aboutabook"
version = "0.1.0"
description = ""
authors = ["woojin-an <dkswoojin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
pymysql = "^1.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
django-stubs = "^5.1.1"
types-pymysql = "^1.1.0.20241103"
pytest = "^8.3.4"
coverage = "^7.6.9"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"
django-rest-swagger = "^2.2.0"
django-summernote = "^0.8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = []
ignore_missing_imports = true

[tool.isort]
profile = "black"